use jdk lib dir rather than es libs